<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="org.kccc.prayer111.MainActivity">
    <item
        android:id="@+id/action_intro"
        android:orderInCategory="100"
        android:title="@string/action_intro"
        />
    <item android:title="@string/action_calender"
          android:id="@+id/action_calender"
          android:orderInCategory="101"/>
    <item android:title="@string/action_login"
          android:id="@+id/action_login"
          android:orderInCategory="102"/>
    <item android:title="@string/action_logout"
          android:id="@+id/action_logout"
          android:orderInCategory="103"/>
    <item android:title="@string/action_licence"
          android:id="@+id/action_licence"
          android:orderInCategory="105"/>
    <item android:title="@string/facebook_page"
          android:id="@+id/action_facebook"
          android:orderInCategory="104"/>
</menu>
